# chainkit

./: .gitattributes  .gitignore  .lfsconfig  Cargo.toml  Makefile  Package.swift  README.md  RELEASE.md  build.rs  run-with-java21.sh  uniffi.toml
.githooks/: post-checkout
Sources/ChainKit/: ChainKit.swift
resources/: mutations.py
scripts/: build-with-jdk21.sh  compress-frameworks.sh  create_github_release.sh  ensure_rust_env.sh  extract_frameworks.sh  prepare_aar_for_distribution.sh  prepare_xcframework_for_distribution.sh  uninstall.sh  upload_aar.sh
src/: encryption.rs  errors.rs  interface.udl  lib.rs  types.rs  types_impl.rs  utils.rs
src/solana/: jupiter_helpers.rs  mod.rs  priority_fee_helpers.rs  types.rs
