[package]
name = "chainkit"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "lib", "dylib"]

[[bin]]
name = "uniffi-bindgen"
required-features = ["uniffi/cli"]

[dependencies]
thiserror = "1.0.39"
uniffi = { version = "0.26.1", features = ["build"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.95"
hex = "0.4.3"
secp256k1 = "0.27.0"
miniscript = "10.0.0"
rust_decimal = "1.26.1"
base64 = "0.21.0"

# Solana
solana-sdk = "1.15.2"
tiny-bip39 = "1.0.0"
solana-program = "1.15.2"
bincode = "1.3.3"
spl-token = { version = "3.5.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.5", features = [
  "no-entrypoint",
] }
spl-memo = { version = "4.0.0", features = ["no-entrypoint"] }
bs58 = "0.5.0"

# Encryption
aes = "0.8.3"
eax = "0.5.0"
hmac = "0.12.1"
pbkdf2 = { version = "0.12.2", features = ["password-hash"] }
sha2 = "0.10.7"

[build-dependencies]
uniffi = { version = "0.26.1", features = ["build"] }

[dev-dependencies]
# For the `examples/durchstich.rs`
reqwest = { version = "0.11", features = ["multipart", "serde_json", "json"] }
tokio = { version = "1.28.0", features = ["full"] }
rand = "0.8.5"
serde_with = "2.3.1"

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/unstoppablefi/curve25519-dalek", branch = "release/3.2" }
# See the last commit. bip39 went from 1.2.0 which used unicode-normalization 0.1.19 to
# 2.0.0 which uses unicode-normalization 0.1.22
# Since bip 1.2.0 can't just be patched to 2.0.0 but we need unicode-normalization 0.1.22,
# this custom bip39 just takes bip39 2.0.0 and downversions it to 1.2.1
bip39 = { git = "https://github.com/spicefarer/rust-bip39", rev = "efe7d58" }

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
lto = true        # Enable Link Time Optimization
opt-level = 'z'   # Optimize for size.
panic = 'unwind'  # Abort on panic
debug = true      # Enable debug symbols. For example, we can use `dwarfdump` to check crash traces.
